repair collapse

--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -25,7 +25,7 @@
 .area:hover{
     height: 210px;
 }
- .navbar{
+.navbar-inverse{
     background-color: #313131;
  }
 
